# Super-Computacao

./: Untitled.ipynb  a.out  data.json  ex.cpp  experimento.cpp  experimento.hpp  log.cpp  log.hpp  main  makefile  pow3.cpp  pow3.hpp  pow3mult.cpp  pow3mult.hpp  sqrt.cpp  sqrt.hpp  sum.cpp  sum.hpp
Atividade1/jupyter/: analyze.ipynb  vector_O0N.json  vector_O1N.json  vector_O2N.json  vector_O3F.json  vector_O3N.json
Atividade1/src/: CMakeLists.txt  experimento.cpp  experimento.hpp  main  main.cpp  pow3.cpp  pow3.hpp  pow3mult.cpp  pow3mult.hpp  sqrt.hpp  sum.hpp  sumsimd.cpp  sumsimd.hpp
Atividade2/: a.out  mandel  mandel.cpp  mandel2  pi  pi.cpp  piseq.cpp
